syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.explorviz.code.proto";
option java_outer_classname = "StructureEvent";

import "google/protobuf/empty.proto";

package net.explorviz.code.proto;

service StructureEventService {
    rpc sendStructureFileEvent (StructureFileEvent) returns (google.protobuf.Empty) {}
}

message StructureFileEvent {
    string landscapeToken = 1;
    string landscapeSecret = 2;
    string fullyQualifiedOperationName = 3;
    int64 epochMilli = 4;
    map<string, string> arguments = 5;
}
